@@ -52,6 +52,7 @@ public class NetworkMap extends GenericObject
 	public static final int MF_SHOW_STATUS_FRAME = 0x000002;
 	public static final int MF_SHOW_STATUS_BKGND = 0x000004;
 	public static final int MF_SHOW_END_NODES    = 0x000008;
+	public static final int MF_CALCULATE_STATUS  = 0x000010;
 	
 	private int mapType;
 	private int layout;
